[Refactor] 설문 전체 조회 api 수정